src/tests/Loader/classloader/StaticVirtualMethods/NegativeTestCases/MethodConstraintMismatch.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <!-- Needed for mechanical merging of all remaining tests, this particular project may not actually need process isolation -->
    <RequiresProcessIsolation>true</RequiresProcessIsolation>
  </PropertyGroup>
  <PropertyGroup>
    <DebugType>Full</DebugType>
  </PropertyGroup>
  <ItemGroup>
    <ProjectReference Include="../TypeHierarchy/TypeHierarchyCommonCs.csproj" />
    <Compile Include="$(MSBuildThisFileName).il" />
  </ItemGroup>
</Project>
